# ELTE_G4-Kurzus

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  jegyzet.txt  jegyzet2.txt  main.cc  vis.mac
.cache/clangd/index/: HPGeDetectorConstruction.cc.6CE2149F89EEF804.idx  HPGeDetectorConstruction.hh.18A13781D4B968B2.idx  (+20 more)
MacroWriter/: alma.txt
Macros/: m.mac  vis.mac
data/Muon_sim/: momentum_distribution.txt  theta_distribution.txt
data/muonEdep20-300-fullGe-Center/: 120MeV_1000event.txt  140MeV_1000event.txt  200MeV_1000event.txt  220MeV_1000event.txt  260MeV_1000event.txt  300MeV_1000event.txt  80MeV_1000event.txt
data/muonEdep20-300-fullGe-offCenter15mm/: 100MeV_1000event.txt  140MeV_1000event.txt  220MeV_1000event.txt  280MeV_1000event.txt  60MeV_1000event.txt  80MeV_1000event.txt
data/muonEdep20-300-halfGe-Center/: 20MeV_1000event.txt
data/muonEdep20-300-halfGe-offCenter15mm/: 140MeV_1000event.txt  180MeV_1000event.txt  20MeV_1000event.txt  220MeV_1000event.txt  240MeV_1000event.txt  80MeV_1000event.txt
include/: HPGeDetectorConstruction.hh  Materials.hh  YourActionInitialisation.hh  YourActionInitialization.hh  YourConcreteWall.hh  YourDetectorConstruction.hh  YourPhysicsList.hh  YourPrimaryGenerator.hh  YourRunAction.hh  YourSensitiveDetector.hh
src/: HPGeDetectorConstruction.cc  Materials.cc  YourActionInitialisation.cc  YourActionInitialization.cc  YourConcreteWall.cc  YourDetectorConstruction.cc  YourPhysicsList.cc  YourPrimaryGenerator.cc  YourRunAction.cc  YourSensitiveDetector.cc
(+109 files in other folders)
